# Sign-Multimodal-Language-Model

./: .gitignore  README.md  Sign-Dataset.ipynb  cositas.ipynb  finetuning.py  make_study.py  node-data.py  node-worker.py  pyproject.toml  requirements.txt  setup_train.py  study.sh  test.ipynb  train.ipynb  train_CUDA.py
Classes/: EarlyStopping.py  Imitator.py  KeypointDataset.py  PositionalEncoding.py  SignDataLoader.py  Tools.py  __init__.py
Classes/checkpoint/: manager.py
Classes/dataloader/: keypoint_dataset.py
Classes/distributed/: partitioner.py
Classes/inference/: ModelPred.py  __init__.py
Classes/study/: studies.py  view_study.py
Classes/train/: EarlyStopping.py  Imitator.py  PositionalEncoding.py  Tools.py  __init__.py  loss.py  trainer.py
Classes/utils/: early_stopping.py  llm_tools.py
config/model/: config.toml
config/training/: finetuning_config.toml  train_config.toml
embed/: train.ipynb
notebooks/: ModelReduction.ipynb  Sign-Dataset.ipynb  test.ipynb  train.ipynb  visualize.ipynb
scripts/: finetuning.py  make_study.py  train.py
src/: __init__.py
src/dataloader/: __init__.py  collate.py
src/imitator_report/: events.out.tfevents.1745387719.Fischl-Ubuntu.63291.0  events.out.tfevents.1745388077.Fischl-Ubuntu.65310.0
src/mslm/: __init__.py  cli.py
src/mslm/checkpoint/: manager.py
src/mslm/dataloader/: __init__.py  sign_dataloader.py
src/mslm/distributed/: __init__.py
src/mslm/inference/: __init__.py  predict_keypoint.py
src/mslm/models/: __init__.py  imitator.py
src/mslm/models/components/: __init__.py  gcn.py  init_func.py  stgcn.py
src/mslm/scripts/: finetuning.py  make_study.py  node_data.py  train.py
src/mslm/studies/: __init__.py  studies.py
src/mslm/training/: __init__.py  loss.py  trainer.py
src/mslm/utils/: __init__.py  config_loader.py  early_stopping.py  paths.py  setup_train.py
src/scripts/: finetuning.py  make_study.py  setup_train.py  train.py
src/study/: studies.py  view_study.py
src/train/: Imitator.py  loss.py  trainer.py
src/utils/: early_stopping.py
ui/: chat.py
