[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mslm"
version = "0.2.0-dev"
description = "Multi-Stage Learning Model for Sign Language"
authors = [
  { name = "Christian Velasquez" },
  { name = "Giorgio Mancusi" },
]
requires-python = ">=3.11.11"
dependencies = [
  "torch",
  "numpy",
  "tqdm",
  "optuna",
  "pandas",
  "unsloth",
  "h5py",
  "nvtx",
]

[project.optional-dependencies]
dev = [
  "poethepoet>=0.24.1"
]

[tool.poe.tasks]
# Definimos cada tarea con su propio bloque para pasar PYTHONPATH
[tool.poe.tasks.train]
cmd = "python scripts/train.py --epochs 100 --batch_size 32"
env = { PYTHONPATH = "." }

[tool.poe.tasks.finetune]
cmd = "python scripts/finetuning.py --epochs 10"
env = { PYTHONPATH = "." }

[tool.poe.tasks.study]
cmd = "python scripts/make_study.py --n_trials 30"
env = { PYTHONPATH = "." }
